<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConfirnOrderActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descOrder"
        android:textSize="16sp"
        android:layout_margin="8dp">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/numberCard"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="16"
            android:hint="@string/numberCard">
        </EditText>

        <EditText
            android:id="@+id/yearCard"
            android:inputType="datetime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/yearCard">
        </EditText>

        <EditText
            android:id="@+id/cvcCard"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="3"
            android:hint="@string/CVCCard">
        </EditText>

        <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:background="@color/colorPrimaryDark"
            android:textColor="#fff"
            android:onClick="clickDownload"
            android:text="@string/download">

        </Button>

    </LinearLayout>

</LinearLayout>